Edited wiki page through web user interface.
git-svn-id: https://appetizer.googlecode.com/svn@332 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/wiki/BuildingThisProject.wiki
+++ b/wiki/BuildingThisProject.wiki
@@ -1,19 +1,1 @@
-#summary Some information on how to build this project
-
-== Details ==
-
-This project is developed and built using [http://www.microsoft.com/express/vc/ Visual C++ 2008 Express Edition] and [http://www.wxwidgets.org/ wxWidgets] (2.8.9 Unicode). The [http://www.boost.org/ Boost C++ libraries] must also be installed on your system.
-
-== Required environment variables ==
-
-In order to build the project, you must set two environment variables:
-
- * *WXWIN* that points to your wxWidgets folder (eg C:\wxWidgets-2.8.9)
-
- * *BOOST_ROOT* that points to your Boost folder (eg c:\boost_1_36_0)
-
-See [http://priyank.co.in/readarticle.php?article_id=1 here] for some information on how to do that.
-
-== Supported OS ==
-
-Currently, wxMiniLaunchBar can only be built under Windows (tested under XP only).
+Follow [http://app.etizer.org/wiki/building-appetizer these instructions] for help on how to build Appetizer.
