Edited wiki page through web user interface.
git-svn-id: https://appetizer.googlecode.com/svn@334 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/wiki/BuildingThisProject.wiki
+++ b/wiki/BuildingThisProject.wiki
@@ -1,3 +1,3 @@
-#Some information on how to build Appetizer
+#summary Some information on how to build Appetizer
 
 Follow [http://app.etizer.org/wiki/building-appetizer these instructions] for help on how to build Appetizer.
