Edited wiki page through web user interface.
git-svn-id: https://appetizer.googlecode.com/svn@335 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/wiki/AboutTheDelphiBranch.wiki
+++ b/wiki/AboutTheDelphiBranch.wiki
@@ -2,7 +2,7 @@
 
 = Introduction =
 
-MiniLaunchBar was initially developed under Delphi and that version is still available in the "branches" folder of the SVN. Although it was only a Beta version, it is very stable and can be used without any risks.
+Appetizer, then called MiniLaunchBar, was initially developed using Delphi and that version is still available in the "branches" folder of the SVN. Although it was only a Beta version, it is very stable and can be used without any risks.
 
 = Details =
 
